# duckietown-cslam

./: .gitignore  .gitmodules  DISCUSSION_README.md  Dockerfile-WesQuackerson  Dockerfile-acquisition-aido2  Dockerfile-acquisition-rpi  Dockerfile-acquisition-x86  Dockerfile-diagnostics  Dockerfile-graph-optimizer  Dockerfile-graphOptimizer  Dockerfile-visualization  Makefile  README.md  docker-compose.yaml
.circleci/: config.yml
01-graph-optimizer/: Dockerfile  Dockerfile-for-viz-NOTWORKING  Dockerfile-visualization  docker-compose.yaml
01-graph-optimizer/ros/src/cslam_visualization/: CMakeLists.txt  package.xml  setup.py
01-graph-optimizer/ros/src/cslam_visualization/config/: cSLAM.rviz
01-graph-optimizer/ros/src/cslam_visualization/include/cslam_visualization/: utils.py
01-graph-optimizer/ros/src/cslam_visualization/src/: publish_markers.py
02-diagnostics/: Dockerfile
03-acquisition/: Dockerfile-WesQuackerson  Dockerfile-acquisition-rpi  Dockerfile-acquisition-x86
03-acquisition/lib/: .bumpversion.cfg  .coveragerc  MANIFEST.in  Makefile
04-Apriltag-processing/: Dockerfile  Dockerfile_rpi  docker-compose.yaml  launch-all-watchtowers.bash  remove-all-processors.bash
04-Apriltag-processing/duckietown_msgs/: __init__.py
04-Apriltag-processing/duckietown_msgs/msg/: _AprilTagExtended.py  __init__.py
04-Apriltag-processing/lib/src/aruco/: CMakeLists.txt  aruco_bug_fixer.py  aruco_caller.cpp  aruco_lib_adapter.py  config.yml
04-Apriltag-processing/ros/src/duckietown_msgs/: CMakeLists.txt
04-Apriltag-processing/ros/src/duckietown_msgs/msg/: AprilTagExtended.msg
04-WesQuackerson/: Dockerfile
05-WesQuackerson/: WesQuackerson.py
05-odometry-processing/: Dockerfile  docker-compose.yaml
05-visual-odometry-processing/: Dockerfile  docker-compose.yaml
06-wheel-odometry-processing/: Dockerfile  docker-compose.yaml  launch-all-autobot.bash
07-WesQuackerson/: Dockerfile  WesQuackerson.py
08-post-processing/: Dockerfile  docker-compose.yaml
WesQuackerson/: WesQuackerson.py
acquisition_node/: Dockerfile  Dockerfile-CB  README.md  acquire_and_publish.py  acquisitionProcessor.py  deviceSideProcessor.py  deviceSideSubscriber.py  docker-compose-benson.yml  docker-compose-donald-cb.yml  docker-compose-donald.yml  docker-compose-wts.yml  image_rectifier.py  interprocess_communication.py  serverSidePublisher.py  startDeviceSide.sh  startServerSide.sh  wrapper.sh
acquisition_node/apriltag/: .gitignore
lib-cslam/: Makefile  requirements.txt  setup.py
lib-cslam/out-comptests/compmake/: cm-args-_dynreports_create_index.pickle  cm-args-_dynreports_merge.pickle  cm-args-duckietown_cslam_tests-_dynreports_getbra-2.pickle  cm-args-duckietown_cslam_tests-_dynreports_getbra.pickle  cm-args-duckietown_cslam_tests-_dynreports_getres-2.pickle  cm-args-duckietown_cslam_tests-_dynreports_getres.pickle  cm-args-duckietown_cslam_tests-_dynreports_merge.pickle  cm-args-duckietown_cslam_tests-aprilTag_extraction_test.pickle  cm-cache-_dynreports_merge.pickle  (+54 more)
lib-cslam/scripts/: setup.py
ros-cslam/: Dockerfile-diagnostics  Dockerfile-visualization  Dockerfile_diagnostics  README.md  Readme  wrapper_diagnostics.sh
ros-cslam/src/cslam_diagnostics/: Readme  package.xml  setup.py  wrapper_diagnostics.sh
ros-cslam/src/cslam_diagnostics/include/cslam_diagnostics/: diagnostics_ui.py
ros-cslam/src/cslam_diagnostics/src/: cslam_diagnostics_node.py
ros-cslam/src/cslam_diagnostics/ui/: diagnostics_ui.ui
scripts/: aido2-at-extractor.py  apriltagsDB_custom.yaml  batch_bag_proccess.sh  docker-compose-donald-rpi.yml  docker-compose-donald-x86.yml  docker-compose-duckiebot-x86.yml  docker-compose-postprocessingtest.yml  docker-compose-watchtower-x86.yml  docker-compose-wesquackerson.yml  docker-compose-wts-x86.yml  launch_decentralized_apriltag_processing.bash  stop_decentralized_apriltag_processing.bash  watchtowers_setup.sh  watchtowers_stop.sh  wrapper_visualization.sh
(+91 files in other folders)
