<?xml version="1.0"?>
<package format="2">
  <name>cslam_diagnostics</name>
  <version>0.0.0</version>
  <description>The cslam_diagnostics package</description>

  <maintainer email="suriro@student.ethz.ch">Rohit Suri</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>rospy</exec_depend>

  <export>
  </export>
</package>
