<?xml version="1.0"?>
<package format="2">
  <name>cslam_visualization</name>
  <version>0.0.0</version>
  <description>The cslam_visualization package</description>
  <maintainer email="suriro@student.ethz.ch">Rohit Suri</maintainer>

  <license>GPLv3</license>


  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>duckietown_visualization</build_depend>
  <build_depend>pose_graph_builder</build_depend>
  <build_depend>rospkg</build_depend>
  <build_depend>rospy</build_depend>
  <build_export_depend>duckietown_visualization</build_export_depend>
  <build_export_depend>pose_graph_builder</build_export_depend>
  <build_export_depend>rospkg</build_export_depend>
  <build_export_depend>rospy</build_export_depend>
  <exec_depend>duckietown_visualization</exec_depend>
  <exec_depend>pose_graph_builder</exec_depend>
  <exec_depend>rospkg</exec_depend>
  <exec_depend>rospy</exec_depend>

  <export>
  </export>

</package>
